fix(nav): remove spacing with li elements through adding some minus margins on top and bottom

--- a/assets/src/css/main.css
+++ b/assets/src/css/main.css
@@ -810,10 +810,11 @@ body {
     padding-left: 0; }
     @media screen and (min-width: 46.5em) {
       .nav__submenu {
-        margin-top: -8px; } }
+        margin-top: -9px; } }
     .nav__submenu li {
       display: block;
-      padding-right: 0; }
+      padding-right: 0;
+      margin: -1px 0; }
       @media screen and (min-width: 46.5em) {
         .nav__submenu li {
           min-width: calc(220px - 1.333em); } }
